--- a/HelperAPI/HelperAPI/Views/Shared/HeaderPartial.cshtml
+++ b/HelperAPI/HelperAPI/Views/Shared/HeaderPartial.cshtml
@@ -1,5 +1,21 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+<section id="header">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+
+                <h1><a href="index.html" id="logo">Halcyonic</a></h1>
+
+               
+                <nav id="nav">
+                    <a href="index.html">Homepage</a>
+                    <a href="threecolumn.html">Three Column</a>
+                    <a href="twocolumn1.html">Two Column #1</a>
+                    <a href="twocolumn2.html">Two Column #2</a>
+                    <a href="onecolumn.html">One Column</a>
+                </nav>
+
+            </div>
+        </div>
+    </div>
+</section>
