--- a/HelperAPI/HelperAPI/Views/Shared/_Layout.cshtml
+++ b/HelperAPI/HelperAPI/Views/Shared/_Layout.cshtml
@@ -1,26 +1,27 @@
-﻿<!DOCTYPE HTML>
+﻿@using HelperAPI.Service
+<!DOCTYPE HTML>
 
 <html>
 <head>
-   @await Html.PartialAsync("MetatagsPartial");
-   @await Html.PartialAsync("CssPartial");
-    
+    @await Html.PartialAsync("MetatagsPartial");
+    @await Html.PartialAsync("CssPartial");
+
 </head>
 <body class="subpage">
     <div id="page-wrapper">
-        @await Html.PartialAsync("HeaderPratial");
+        @await Html.PartialAsync("HeaderPartial");
         <section id="content">
             <div class="container">
-                <div class="row">               
-                    <div class="col-9 col-12-medium imp-medium">
+                <div class="row">
+                    <div class="col-9 col-12-medium">
                         @RenderBody()
                     </div>
                 </div>
                 @await Html.PartialAsync("SidebarPartial");
             </div>
         </section>
-        @await Html.PartialAsync("FooterPartial");      
+        @await Html.PartialAsync("FooterPartial");
     </div>
-    @await Html.PartialAsync("ScriptPartial ");
+    @await Html.PartialAsync("ScriptsPartial");
 </body>
 </html>
